--- a/.github/workflows/publish-next.yml
+++ b/.github/workflows/publish-next.yml
@@ -20,6 +20,9 @@ jobs:
       
     - name: Install lib dependencies
       run: cd ./projects/diaas-angular-cdk-hal && rm -rf node_modules && npm install && npm run generate-lib
+      
+    - name: Install jest
+      run: npm install --save-dev jest
     
     - name: Test library
       run: cd ./projects/diaas-angular-cdk-hal && npm run test
