--- a/projects/diaas-angular-cdk-hal/package.json
+++ b/projects/diaas-angular-cdk-hal/package.json
@@ -23,15 +23,15 @@
     "@angular/platform-browser": "8.2.14",
     "@angular/platform-browser-dynamic": "8.2.14",
     "@angular/router": "8.2.14",
-    "@dxc-technology/halstack-client": "^1.1.5",
     "@dxc-technology/halstack-angular": "0.0.0-7616864",
+    "@dxc-technology/halstack-client": "^1.1.5",
     "@material-extended/mde": "^2.2.2",
     "@testing-library/angular": "^8.2.0",
     "@testing-library/dom": "^7.2.1",
     "@types/jest": "^24.9.1",
     "emotion": "10.0.27",
     "hammerjs": "^2.0.8",
-    "jest": "^24.9.0",
+    "jest": "^24.1.0",
     "jest-preset-angular": "^7.1.1",
     "moment": "^2.24.0",
     "ng-click-outside": "^6.0.0",
@@ -39,6 +39,7 @@
     "ng-packagr": "^5.4.0",
     "ngx-mask": "^8.0.2",
     "rxjs": "~6.5.2",
+    "ts-jest": "^24.0.0",
     "tsickle": "^0.37.0",
     "vanilla-text-mask": "^5.1.1",
     "zone.js": "~0.9.1"
