--- a/projects/diaas-angular-cdk-hal/tsconfig.spec.json
+++ b/projects/diaas-angular-cdk-hal/tsconfig.spec.json
@@ -2,17 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
-    "emitDecoratorMetadata": true,
     "types": [
-      "jasmine",
-      "node",
-      "jest"
+      "jest",
+      "node"
     ]
-  },
-  "files": [
-  ],
-  "include": [
-    "**/*.spec.ts",
-    "**/*.d.ts"
-  ]
+  }
 }
