--- a/projects/diaas-angular-cdk-hal/tsconfig.lib.json
+++ b/projects/diaas-angular-cdk-hal/tsconfig.lib.json
@@ -1,16 +1,17 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "src",
     "outDir": "../../out-tsc/lib",
-    "target": "es2015",
+    "module": "es2015",
     "moduleResolution": "node",
     "declaration": true,
     "sourceMap": true,
     "inlineSources": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
     "importHelpers": true,
+    "target": "es6",
     "typeRoots": [
       "node_modules/@types"
     ],
@@ -29,11 +30,7 @@
     "preserveSymlinks": true
   },
   "exclude": [
-    "src/test.ts",
+    "test-import.ts",
     "**/*.spec.ts"
-  ],
-  "include": [
-    "src",
-    "tests"
   ]
 }
