--- a/projects/diaas-angular-cdk-hal/package.json
+++ b/projects/diaas-angular-cdk-hal/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "^24.9.1",
     "emotion": "10.0.27",
     "hammerjs": "^2.0.8",
+    "jest": "^26.4.2",
     "jest-preset-angular": "^7.1.1",
     "moment": "^2.24.0",
     "ng-click-outside": "^6.0.0",
@@ -38,7 +39,7 @@
     "ng-packagr": "^5.4.0",
     "ngx-mask": "^8.0.2",
     "rxjs": "~6.5.2",
-    "ts-jest": "^26.4.0",
+    "ts-jest": "^24.0.0",
     "tsickle": "^0.37.0",
     "vanilla-text-mask": "^5.1.1",
     "zone.js": "~0.9.1"
@@ -57,7 +58,6 @@
     "cypress-image-snapshot": "^3.1.1",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
-    "jest": "^26.4.2",
     "karma": "4.1.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.1",
@@ -65,11 +65,11 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "ng-packagr": "^5.4.0",
     "protractor": "5.4.0",
-    "start-server-and-test": "^1.10.6",
     "ts-node": "7.0.0",
     "tsickle": "^0.37.0",
     "tslib": "^1.10.0",
     "tslint": "5.15.0",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "start-server-and-test": "^1.10.6"
   }
 }
