--- a/projects/diaas-angular-cdk-hal/package.json
+++ b/projects/diaas-angular-cdk-hal/package.json
@@ -32,18 +32,14 @@
     "@material-extended/mde": "^2.2.2",
     "@testing-library/angular": "^8.2.0",
     "@testing-library/dom": "^7.2.1",
-    "@types/jest": "^24.9.1",
     "emotion": "10.0.27",
     "hammerjs": "^2.0.8",
-    "jest": "^26.4.2",
-    "jest-preset-angular": "^7.1.1",
     "moment": "^2.24.0",
     "ng-click-outside": "^6.0.0",
     "ng-mocks": "^9.6.4",
     "ng-packagr": "^5.4.0",
     "ngx-mask": "^8.0.2",
     "rxjs": "~6.5.2",
-    "ts-jest": "25.0.0",
     "tsickle": "^0.37.0",
     "vanilla-text-mask": "^5.1.1",
     "zone.js": "~0.9.1"
@@ -55,6 +51,8 @@
     "@angular/compiler-cli": "8.2.14",
     "@angular/language-service": "8.2.14",
     "@babel/core": "^7.4.5",
+    "@types/jasmine": "^3.5.14",
+    "@types/jest": "^24.9.1",
     "@types/node": "8.9.4",
     "babel-loader": "^8.0.6",
     "codelyzer": "~5.1.0",
@@ -62,6 +60,8 @@
     "cypress-image-snapshot": "^3.1.1",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
+    "jest": "^24.9.0",
+    "jest-preset-angular": "^7.1.1",
     "karma": "4.1.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.1",
@@ -69,11 +69,11 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "ng-packagr": "^5.4.0",
     "protractor": "5.4.0",
+    "start-server-and-test": "^1.10.6",
     "ts-node": "7.0.0",
     "tsickle": "^0.37.0",
     "tslib": "^1.10.0",
     "tslint": "5.15.0",
-    "typescript": "3.5.3",
-    "start-server-and-test": "^1.10.6"
+    "typescript": "3.5.3"
   }
 }
