--- a/.github/workflows/publish-next.yml
+++ b/.github/workflows/publish-next.yml
@@ -18,6 +18,9 @@ jobs:
         node-version: 10.x
         registry-url: https://registry.npmjs.org/
       
+    - name: Install dependencies
+      run: rm -rf node_modules && npm install
+
     - name: Install lib dependencies
       run: cd ./projects/diaas-angular-cdk-hal && rm -rf node_modules && npm install && npm run generate-lib
     
